Add time manager generator & fix tests
